option('enable-cpuset', type : 'boolean', value : 'false', description : 'Enable cpuset support')
option('enable-signal', type : 'boolean', value : 'false', description : 'Enable signal support')
option('enable-apic', type : 'boolean', value : 'false', description : 'Enable apic support')
option('enable-msr-protocol', type : 'boolean', value : 'false', description : 'Enable msr-protocol support')
option('enable-ghcb', type : 'boolean', value : 'false', description : 'Enable ghcb support')
option('enable-pgtable', type : 'boolean', value : 'false', description : 'Enable pgtable support')
option('enable-seimi', type : 'boolean', value : 'false', description : 'Enable seimi support')
option('enable-syscall', type : 'boolean', value : 'false', description : 'Enable syscall support')
option('enable-vsyscall', type : 'boolean', value : 'false', description : 'Enable vsyscall support')
option('enable-debug', type : 'boolean', value : 'false', description : 'Enable debug support')
option('enable-dune-boot', type : 'boolean', value : 'false', description : 'Enable dune-boot support')
option('enable-remap-syscall', type : 'boolean', value : 'false', description : 'Enable remap-syscall support')
option('enable-remap-vsyscall', type : 'boolean', value : 'false', description : 'Enable remap-vsyscall support')
option('enable-dump-details', type : 'boolean', value : 'false', description : 'Enable dump-details support')
option('enable-pgtbale-la57', type : 'boolean', value : 'false', description : 'Enable pgtbale-la57 support')
option('enable-pgtable-selftest', type : 'boolean', value : 'false', description : 'Enable pgtable-selftest support')
option('enable-stack-trace', type : 'boolean', value : 'false', description : 'Enable stack-trace support')
option('enable-ghcb-selftest', type : 'boolean', value : 'false', description : 'Enable ghcb-selftest support')
option('enable-serial-port', type : 'boolean', value : 'false', description : 'Enable serial-port support')